[gd_scene load_steps=3 format=3 uid="uid://dxkhkth0ukk5s"]

[ext_resource type="Script" path="res://World/UI/MainMenuIG.gd" id="1_3ouwg"]
[ext_resource type="FontFile" uid="uid://tffy4cxls2dq" path="res://Art/KodeMono-Regular.ttf" id="1_wq8aw"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_3ouwg")

[node name="ColorRect2" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.192157, 0.192157, 0.192157, 0.713726)

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_left = 115.2
offset_top = 61.0
offset_right = 1036.8
offset_bottom = 587.4
color = Color(0.207843, 0.207843, 0.207843, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="ColorRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 50.0
offset_top = 50.0
offset_right = -51.6
offset_bottom = 50.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="MagicCreation" type="Button" parent="ColorRect/VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
theme_override_fonts/font = ExtResource("1_wq8aw")
text = "Magic Creation"

[node name="InputChange" type="Button" parent="ColorRect/VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
theme_override_fonts/font = ExtResource("1_wq8aw")
text = "Input Change"

[node name="Stats" type="Button" parent="ColorRect/VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
theme_override_fonts/font = ExtResource("1_wq8aw")
text = "Stats"

[node name="CheckButton" type="CheckButton" parent="ColorRect/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_wq8aw")
text = "Particles not Showing?"

[node name="Exit" type="Button" parent="."]
layout_mode = 0
offset_left = 1077.0
offset_top = 25.0
offset_right = 1127.0
offset_bottom = 75.0
text = "Exit"

[connection signal="pressed" from="ColorRect/VBoxContainer/MagicCreation" to="." method="_on_magic_creation_pressed"]
[connection signal="pressed" from="ColorRect/VBoxContainer/InputChange" to="." method="_on_input_change_pressed"]
[connection signal="pressed" from="ColorRect/VBoxContainer/Stats" to="." method="_on_stats_pressed"]
[connection signal="pressed" from="ColorRect/VBoxContainer/CheckButton" to="." method="_on_check_button_pressed"]
[connection signal="pressed" from="Exit" to="." method="_on_exit_pressed"]
